test/Fail/LocalRewriteLambda.err
LocalRewriteLambda.agda:7.7-39: error: [LocalRewriteOutsideTelescope]
p : 0 ≡ x  is not a legal rewrite rule, since local rewrite rules
are (currently) only allowed in module telescopes. Consider
creating an anonymous module
when checking that the expression (x : Nat) (@rew p : 0 ≡ x) → Nat
is a type

LocalRewriteLambda.agda:12.65-66: error: [UnequalTerms]
The terms
  zero
and
  x
are not equal at type Nat
when checking that the expression b has type D x
